Revise README
Updated README to enhance clarity